@@ -1,3 +1,7 @@
+* Tue Oct 18 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0                                                                                                           
+- Updated to use the version of 'simpcat' that does not conflict with                                                                                                         
+  'puppetlabs/concat'.
+
 * Tue Oct 11 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.3-0
 - Fixed an issue where the filenames used by 'concat' could contain '/' which
   made them unfit for system use.
